# isdn3000e-lab1-tasks

./: .gitignore  README.md
module1-shell/: README.md
module1-shell/hunt/: .hidden_config
module1-shell/hunt/config/: settings.ini
module1-shell/hunt/data/: .secret_key  dataset.csv
module1-shell/hunt/docs/: readme.txt
module1-shell/hunt/src/core/: engine.cpp
module1-shell/hunt/src/utils/: helper.cpp
module2-gpp/: README.md
module2-gpp/my_solution/: calculator  calculator.cpp  calculator.h  main.cpp
module2-gpp/starter/: calculator.cpp
module3-cmake/: README.md
module3-cmake/solution/: CMakeLists.txt
module3-cmake/solution/src/: main.cpp
module3-cmake/starter/: CMakeLists.txt
module3-cmake/starter/src/: calculator.cpp
